--- a/index.html
+++ b/index.html
@@ -1,272 +1,12 @@
+<!DOCTYPE html>
 <html>
-
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1251">
-<meta name=Generator content="Microsoft Word 12 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
-@font-face
-	{font-family:Tahoma;
-	panose-1:2 11 6 4 3 5 4 4 2 4;}
-@font-face
-	{font-family:Verdana;
-	panose-1:2 11 6 4 3 5 4 4 2 4;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin-top:0cm;
-	margin-right:0cm;
-	margin-bottom:10.0pt;
-	margin-left:0cm;
-	line-height:115%;
-	font-size:11.0pt;
-	font-family:"Calibri","sans-serif";}
-a:link, span.MsoHyperlink
-	{color:blue;
-	text-decoration:underline;}
-a:visited, span.MsoHyperlinkFollowed
-	{color:purple;
-	text-decoration:underline;}
-p.MsoAcetate, li.MsoAcetate, div.MsoAcetate
-	{mso-style-link:"Текст выноски Знак";
-	margin:0cm;
-	margin-bottom:.0001pt;
-	font-size:8.0pt;
-	font-family:"Tahoma","sans-serif";}
-span.a
-	{mso-style-name:"Текст выноски Знак";
-	mso-style-link:"Текст выноски";
-	font-family:"Tahoma","sans-serif";}
-p.msopapdefault, li.msopapdefault, div.msopapdefault
-	{mso-style-name:msopapdefault;
-	margin-right:0cm;
-	margin-bottom:10.0pt;
-	margin-left:0cm;
-	line-height:115%;
-	font-size:12.0pt;
-	font-family:"Times New Roman","serif";}
-.MsoChpDefault
-	{font-size:10.0pt;}
-@page Section1
-	{size:595.3pt 841.9pt;
-	margin:2.0cm 21.2pt 2.0cm 1.0cm;}
-div.Section1
-	{page:Section1;}
--->
-</style>
-
+	<title>Р’РѕР»С€РµР±РЅР°СЏ СЂРµРєР°</title>
 </head>
-
-<body bgcolor="#92D050" lang=RU link=blue vlink=purple>
-
-<div class=Section1>
-
-<p class=MsoNormal align=center style='text-align:center;line-height:150%'><b><span
-style='font-size:16.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'>Привет, сегодня мы сыграем в интересную игру - &quot;Волшебная
-река&quot;!</span></b></p>
-
-<p class=MsoNormal align=center style='text-align:center;line-height:150%'><b><span
-style='font-size:16.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'>&nbsp;</span></b></p>
-
-<p class=MsoNormal align=center style='text-align:center;line-height:150%'><span
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'>Играть мы будем рыбкой по имени <b>Ротя</b>:</span></p>
-
-<p class=MsoNormal align=center style='text-align:center;line-height:150%'><span
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'><img width=237 height=106 src="index.files/image001.gif"
-alt=Рисунок1.png></span></p>
-
-<p class=MsoNormal align=center style='text-align:center;line-height:150%'><span
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'>Наша цель - управляя клавишами </span><span lang=EN-US
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'>W</span><span style='font-size:14.0pt;line-height:150%;
-font-family:"Verdana","sans-serif";color:#0D0D0D'>,</span><span lang=EN-US
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'>S</span><span style='font-size:14.0pt;line-height:150%;
-font-family:"Verdana","sans-serif";color:#0D0D0D'>,</span><span lang=EN-US
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'>A</span><span style='font-size:14.0pt;line-height:150%;
-font-family:"Verdana","sans-serif";color:#0D0D0D'>,</span><span lang=EN-US
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'>D </span><b><span style='font-size:14.0pt;line-height:150%;
-font-family:"Verdana","sans-serif";color:#0D0D0D'>собирать</span></b><span
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'> такие ништяки:</span></p>
-
-<p class=MsoNormal align=center style='text-align:center;line-height:150%'><span
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'><img width=168 height=179 src="index.files/image002.gif"
-alt=weed.png></span><b><span style='font-size:14.0pt;line-height:150%;
-font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></b></p>
-
-<p class=MsoNormal align=center style='text-align:center;line-height:150%'><b><span
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'>И избегать этого:</span></b></p>
-
-<p class=MsoNormal align=center style='text-align:center;line-height:150%'><b><span
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'><img width=294 height=134 src="index.files/image003.gif"
-alt=dick.png></span></b><b><span style='font-size:14.0pt;line-height:150%;
-font-family:"Verdana","sans-serif";color:#0D0D0D'><img width=166 height=141
-src="index.files/image004.gif" alt=poop.png></span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>Всего можно выдержать <b>ДО
-ТРЕХ</b></span><span style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'><img width=46 height=39 src="index.files/image005.gif"
-alt=poop.png></span><span style='font-size:14.0pt;line-height:150%;font-family:
-"Verdana","sans-serif";color:#0D0D0D'> и <b>ВСЕГО ОДИН</b></span><b><span
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'><img width=94 height=43 src="index.files/image006.gif"
-alt=dick.png></span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>(ведь один раз - не
-пидорас)</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>Если же вы сожрали</span><span
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'><img width=46 height=39 src="index.files/image005.gif"
-alt=poop.png></span><span style='font-size:14.0pt;line-height:150%;font-family:
-"Verdana","sans-serif";color:#0D0D0D'> тогда </span><span style='font-size:
-14.0pt;line-height:150%;font-family:"Verdana","sans-serif";color:#0D0D0D'><img
-width=94 height=43 src="index.files/image006.gif" alt=dick.png></span><span
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'>даст дополнительную жизнь, но такое можно сделать <b>ТОЛЬКО ОДИН
-РАЗ</b> (вы поняли почему).</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>Каждые десять</span><span
-style='font-size:14.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'><img width=52 height=55 src="index.files/image007.gif"
-alt=weed.png></span><span style='font-size:14.0pt;line-height:150%;font-family:
-"Verdana","sans-serif";color:#0D0D0D'>скорость движения объектов увеличивается.</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>Ещё в игре нам будут
-попадаться такие бонусы:</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>Шприц с герой - он <b>замедляет</b>
-скорость движения всех объектов</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'><img width=132
-height=132 src="index.files/image008.gif" alt=shpric1.png></span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>Шприц со скоростью - он <b>увеличивает</b>
-скорость движения всех объектов</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'><img width=133
-height=132 src="index.files/image009.gif" alt=shpric2.png></span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span lang=EN-US style='font-size:14.0pt;
-line-height:150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span lang=EN-US style='font-size:14.0pt;
-line-height:150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>Пауза
-включается/отключается кнопкой </span><b><span lang=EN-US style='font-size:
-14.0pt;line-height:150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>Enter</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span style='font-size:14.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>Если вам всё понятно,
-тогда</span></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><b><span style='font-size:18.0pt;
-line-height:150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>Удачного
-заплыва ;-)</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><b><span style='font-size:16.0pt;
-line-height:150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><b><span style='font-size:20.0pt;
-line-height:150%;font-family:"Verdana","sans-serif";color:red'><a
-href="MagicRiver.html"><span style='color:red'>Начать игру</span></a></span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><b><span style='font-size:16.0pt;
-line-height:150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><b><span style='font-size:16.0pt;
-line-height:150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><b><span style='font-size:16.0pt;
-line-height:150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><b><span style='font-size:16.0pt;
-line-height:150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>&nbsp;</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0cm;margin-bottom:.0001pt;
-text-align:center;line-height:150%'><span lang=EN-US style='font-size:12.0pt;
-line-height:150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>P</span><span
-style='font-size:12.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'>.</span><span lang=EN-US style='font-size:12.0pt;line-height:
-150%;font-family:"Verdana","sans-serif";color:#0D0D0D'>S</span><span
-style='font-size:12.0pt;line-height:150%;font-family:"Verdana","sans-serif";
-color:#0D0D0D'>. Игра не имеет цели кого-либо оскорбить. Все совпадения с
-реальностью случайны.</span></p>
-
-</div>
-
+<body>
+<img src="rul1" style="width: 100%" />
+<img src="rul2" style="width: 100%" />
+<br>
+<a href="magicriver.html" style="color: red; font-size: 20px"></a>
 </body>
-
 </html>
