--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>Волшебная река</title>
 </head>
 <body>
-<img src="rul1" style="width: 100%" />
-<img src="rul2" style="width: 100%" />
+<img src="rul1.png" style="width: 100%" />
+<img src="rul2.png" style="width: 100%" />
 <br>
 <a href="magicriver.html" style="color: red; font-size: 20px"></a>
 </body>
