New index.html v2

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<title>Волшебная река</title>
 </head>
-<body>
-<img src="rul1" style="width: 100%" />
-<img src="rul2" style="width: 100%" />
+<body style="margin: 0; padding: 0; text-align: center; background-color: #92d050">
+<img src="rul1.png" style="width: 100%; margin-bottom: -10px" />
+<img src="rul2.png" style="width: 100%" />
 <br>
-<a href="magicriver.html" style="color: red; font-size: 20px"></a>
+<br>
+<a href="magicriver.html" style="color: red; font-size: 46px; margin: 0 auto">Начать заплыв</a>
+<img src="rul3.png" style="width: 100%" />
 </body>
 </html>
