--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
 	<title>Волшебная река</title>
 </head>
-<<<<<<< HEAD
+
 <body style="margin: 0; padding: 0; text-align: center; background-color: #92d050">
 <img src="rul1.png" style="width: 100%; margin-bottom: -10px" />
 =======
 <body>
 <img src="rul1.png" style="width: 100%" />
->>>>>>> f1211f3bc23273fac14964c9de96efea76d0b0f4
+
 <img src="rul2.png" style="width: 100%" />
 <br>
 <br>
-<a href="magicriver.html" style="color: red; font-size: 46px; margin: 0 auto">Начать заплыв</a>
+<a href="magicriver.html" style="color: red; font-size: 46px">Начать заплыв</a>
 <img src="rul3.png" style="width: 100%" />
 </body>
+
 </html>
