--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <img src="rul2.png" style="width: 100%" />
 <br>
 <br>
-<a href="magicriver.html" style="color: red; font-size: 46px; margin: 0 auto">Начать заплыв</a>
+<a href="MagicRiver.html" style="color: red; font-size: 46px; margin: 0 auto">Начать заплыв</a>
 <img src="rul3.png" style="width: 100%" />
 </body>
 </html>
