--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
 <body style="margin: 0; padding: 0; text-align: center; background-color: #92d050">
 
-<img src="rul1.png" style="width: 100%" />
-<img src="rul2.png" style="width: 100%" />
+<img src="rul1.PNG" style="width: 100%" />
+<img src="rul2.PNG" style="width: 100%" />
 <br>
 <br>
 <a href="MagicRiver.html" style="color: red; font-size: 46px; margin: 0 auto">Начать заплыв</a>
-<img src="rul3.png" style="width: 100%" />
+<img src="rul3.PNG" style="width: 100%" />
 </body>
 </html>
